--- a/app/src/main/res/menu/compare.xml
+++ b/app/src/main/res/menu/compare.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item android:id="@+id/menu_change_color"
+        android:title="color"
+        android:icon="@drawable/ic_color_lens_white_24dp"
+        app:showAsAction="ifRoom"/>
     <item android:id="@+id/menu_chart"
         android:title="chart"
         android:icon="@drawable/ic_multiline_chart_white_24dp"
