--- a/app/src/main/res/layout/activity_movie_list.xml
+++ b/app/src/main/res/layout/activity_movie_list.xml
@@ -38,7 +38,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/actionbar"
             app:layout_constraintBottom_toBottomOf="parent"
-            tools:listitem="@layout/adapter_movie_list"/>
+            tools:listitem="@layout/adapter_movie_list_wild"/>
 
         <RelativeLayout
             android:id="@+id/group_select_container"
@@ -76,5 +76,28 @@
                 android:layout_below="@id/tv_title_select"
                 tools:listitem="@layout/adapter_selected_movie"/>
         </RelativeLayout>
+
+        <com.king.lib.groupmenu.GroupMenuVer
+            android:id="@+id/group_menu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:menu="@menu/movie_list_group"
+            app:verItemBackgroundColor="@color/group_menu_bg"/>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_index"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/group_menu"
+            app:layout_constraintTop_toBottomOf="@id/actionbar"/>
+
     </android.support.constraint.ConstraintLayout>
 </layout>
