--- a/app/src/main/res/layout/adapter_market_rank_item.xml
+++ b/app/src/main/res/layout/adapter_market_rank_item.xml
@@ -46,6 +46,37 @@
                 android:layout_width="35dp"
                 android:layout_height="wrap_content"
                 android:text="@{item.year}"/>
+            <android.support.constraint.ConstraintLayout
+                android:id="@+id/cl_image"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+                <com.king.app.gross.view.widget.ScaleImageView
+                    android:id="@+id/iv_image"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:scaleType="centerCrop"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:baseOnHeight="false"
+                    app:ratioWidth="16"
+                    app:ratioHeight="9"/>
+                <TextView
+                    android:id="@+id/tv_name_bottom"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:maxLines="2"
+                    android:text="@{item.name}"
+                    android:textColor="@color/white"
+                    android:textSize="10dp"
+                    android:background="#66000000"
+                    android:padding="3dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
+            </android.support.constraint.ConstraintLayout>
             <TextView
                 android:id="@+id/tv_name"
                 android:layout_width="0dp"
