--- a/app/src/main/res/menu/compare.xml
+++ b/app/src/main/res/menu/compare.xml
@@ -9,4 +9,7 @@
         android:title="chart"
         android:icon="@drawable/ic_multiline_chart_white_24dp"
         app:showAsAction="ifRoom"/>
+    <item android:id="@+id/menu_type"
+        android:title="Accumulated"
+        app:showAsAction="never"/>
 </menu>
