--- a/app/src/main/res/layout/activity_movie.xml
+++ b/app/src/main/res/layout/activity_movie.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <data>
+        <variable
+            name="model"
+            type="com.king.app.gross.viewmodel.MovieViewModel"/>
+    </data>
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -20,12 +26,16 @@
                     android:id="@+id/iv_match"
                     android:layout_width="match_parent"
                     android:layout_height="204dp"
-                    app:layout_collapseMode="parallax" />
+                    android:scaleType="centerCrop"
+                    app:layout_collapseMode="parallax"
+                    app:movieCover="@{model.movieImageUrl}" />
 
+                <!-- 这里加marginTop是为了平移沉浸式状态栏的效果下不遮挡系统通知栏图标 -->
                 <android.support.v7.widget.Toolbar
                     android:id="@+id/toolbar"
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
+                    android:layout_marginTop="30dp"
                     app:layout_collapseMode="pin">
 
                 </android.support.v7.widget.Toolbar>
@@ -44,6 +54,7 @@
                     android:layout_marginTop="16dp"
                     android:textColor="@color/text_main"
                     android:textSize="20dp"
+                    android:text="@{model.movieName}"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"/>
@@ -57,6 +68,7 @@
                     android:layout_marginBottom="16dp"
                     android:textColor="@color/text_second"
                     android:textSize="16dp"
+                    android:text="@{model.movieChnName}"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/tv_date"
                     app:layout_constraintTop_toBottomOf="@id/tv_name"
@@ -69,6 +81,7 @@
                     android:layout_marginEnd="16dp"
                     android:textColor="@color/text_second"
                     android:textSize="16dp"
+                    android:text="@{model.movieDebut}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintBottom_toBottomOf="@id/tv_name_chn"/>
 
@@ -84,12 +97,25 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
+                <ImageView
+                    android:id="@+id/iv_edit_base"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:padding="8dp"
+                    android:background="?android:attr/selectableItemBackgroundBorderless"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/ic_edit_grey_700_24dp" />
+
                 <TextView
                     android:id="@+id/tv_title_base"
                     android:text="Basic Information"
-                    style="@style/TvMovieParamTitle"
+                    style="@style/TvMovieTitleBase"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="@id/iv_edit_base"
+                    app:layout_constraintBottom_toBottomOf="@id/iv_edit_base" />
 
                 <RelativeLayout
                     android:id="@+id/rl_budget"
@@ -108,7 +134,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
-                        android:layout_alignParentRight="true"/>
+                        android:layout_alignParentRight="true"
+                        android:text="@{model.movieBudget}"/>
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
@@ -132,7 +159,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
-                        android:layout_alignParentRight="true"/>
+                        android:layout_alignParentRight="true"
+                        android:text="@{model.movieExchangeRate}"/>
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
@@ -150,13 +178,14 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
-                        android:text="Mojo Id"/>
+                        android:text="@{model.mojoTitle}"/>
                     <TextView
                         android:id="@+id/tv_mojo"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
-                        android:layout_alignParentRight="true"/>
+                        android:layout_alignParentRight="true"
+                        android:text="@{model.movieMojoId}"/>
                 </RelativeLayout>
 
                 <TextView
@@ -183,7 +212,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
-                        android:layout_alignParentRight="true"/>
+                        android:layout_alignParentRight="true"
+                        android:textColor="@color/text_red"
+                        android:text="@{model.grossNa}"/>
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
@@ -207,7 +238,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
-                        android:layout_alignParentRight="true"/>
+                        android:layout_alignParentRight="true"
+                        android:textColor="@color/text_red"
+                        android:text="@{model.grossChn}"/>
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
@@ -231,7 +264,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
-                        android:layout_alignParentRight="true"/>
+                        android:layout_alignParentRight="true"
+                        android:text="@{model.grossMarket}"/>
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
@@ -255,7 +289,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
-                        android:layout_alignParentRight="true"/>
+                        android:layout_alignParentRight="true"
+                        android:textColor="@color/text_red"
+                        android:text="@{model.grossOversea}"/>
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
@@ -279,7 +315,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
-                        android:layout_alignParentRight="true"/>
+                        android:layout_alignParentRight="true"
+                        android:textColor="@color/text_red"
+                        android:text="@{model.grossWorldWide}"/>
                 </RelativeLayout>
 
             </android.support.constraint.ConstraintLayout>
