--- a/app/src/main/res/layout/fragment_edit_market_total.xml
+++ b/app/src/main/res/layout/fragment_edit_market_total.xml
@@ -23,7 +23,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
-            android:inputType="number"
+            android:inputType="numberSigned"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/tv_un_open_title"
             app:layout_constraintTop_toTopOf="parent" />
