--- a/app/src/main/res/layout/adapter_compare_item.xml
+++ b/app/src/main/res/layout/adapter_compare_item.xml
@@ -2,30 +2,58 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
+        <import type="android.view.View"/>
         <import type="com.king.app.gross.viewmodel.bean.CompareItem"/>
         <variable
             name="bean"
             type="CompareItem"/>
     </data>
-    <android.support.v7.widget.LinearLayoutCompat
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical"
         android:orientation="horizontal"
         android:background="@color/white"
         android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        app:divider="@drawable/shape_divider_hor"
-        app:showDividers="middle">
+        android:paddingRight="10dp">
+        <ImageView
+            android:id="@+id/iv_flag"
+            android:layout_width="60dp"
+            android:layout_height="35dp"
+            android:layout_marginTop="4dp"
+            android:scaleType="fitXY"
+            android:visibility="@{bean.imageUrl == null ? View.GONE:View.VISIBLE}"
+            app:layout_constraintVertical_chainStyle="packed"
+            app:layout_constraintStart_toStartOf="@+id/tv_key"
+            app:layout_constraintBottom_toTopOf="@+id/tv_key"
+            app:layout_constraintTop_toTopOf="@+id/group_compare"
+            app:marketFlag="@{bean.imageUrl}"/>
         <TextView
             android:id="@+id/tv_key"
             android:layout_width="70dp"
             android:layout_height="wrap_content"
             android:text="@{bean.key}"
-            android:textColor="@color/text_main"/>
+            android:textColor="@color/text_main"
+            android:textSize="12dp"
+            android:layout_marginBottom="4dp"
+            app:layout_constraintVertical_chainStyle="packed"
+            app:layout_constraintTop_toBottomOf="@+id/iv_flag"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/group_compare" />
+        <View
+            android:id="@+id/divider"
+            android:layout_width="@dimen/divider"
+            android:layout_height="0dp"
+            android:background="@color/divider"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/tv_key"/>
         <com.king.app.gross.view.widget.GrossCompareLayout
             android:id="@+id/group_compare"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-    </android.support.v7.widget.LinearLayoutCompat>
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toEndOf="@id/divider"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+    </android.support.constraint.ConstraintLayout>
 </layout>
