--- a/app/src/main/res/layout/activity_movie.xml
+++ b/app/src/main/res/layout/activity_movie.xml
@@ -249,36 +249,11 @@
                 </RelativeLayout>
 
                 <RelativeLayout
-                    android:id="@+id/rl_market"
-                    style="@style/GroupMovieParam"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/rl_chn">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:text="Market(Except North America)"/>
-                    <TextView
-                        android:id="@+id/tv_market"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerVertical="true"
-                        android:layout_alignParentRight="true"
-                        android:text="@{model.grossMarket}"/>
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:background="@color/divider"
-                        android:layout_alignParentBottom="true"/>
-                </RelativeLayout>
-
-                <RelativeLayout
                     android:id="@+id/rl_oversea"
                     style="@style/GroupMovieParam"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/rl_market">
+                    app:layout_constraintTop_toBottomOf="@id/rl_chn">
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -318,8 +293,47 @@
                         android:layout_alignParentRight="true"
                         android:textColor="@color/text_red"
                         android:text="@{model.grossWorldWide}"/>
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="@color/divider"
+                        android:layout_alignParentBottom="true"/>
                 </RelativeLayout>
 
+                <RelativeLayout
+                    android:id="@+id/rl_market"
+                    style="@style/GroupMovieParam"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/rl_ww">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:text="Market(Except North America)"/>
+                    <TextView
+                        android:id="@+id/tv_market"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_alignParentRight="true"
+                        android:text="@{model.grossMarket}"/>
+                </RelativeLayout>
+
+                <TextView
+                    android:id="@+id/tv_market_rank"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="56dp"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
+                    android:textColor="@color/text_second"
+                    android:text="@{model.marketRankInfo}"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/rl_market"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
             </android.support.constraint.ConstraintLayout>
         </android.support.v4.widget.NestedScrollView>
 
